[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "database-connector-kit"
authors = [
    {name = "Frédérick NEY", email = "frederick.ney@gmail.com"},
]
description = "Database(s) connector and manager"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
"Environment :: Web Environment",
"Intended Audience :: Developers",
"Operating System :: OS Independent",
"Framework :: FastAPI",
"Topic :: Software Development :: Libraries :: Python Modules",
'Programming Language :: Python :: 3.7',
'Programming Language :: Python :: 3.8',
'Programming Language :: Python :: 3.9',
'Programming Language :: Python :: 3.10',
'Programming Language :: Python :: 3.11',
'Programming Language :: Python :: 3.12',
'Programming Language :: Python :: 3.13',
]
dependencies = [
    "pyyaml",
    "pyopenssl",
    "SQLAlchemy",
    'importlib-metadata; python_version>"3.7"'
]
version="1.0.1"





[project.urls]
Homepage = "https://github.com/frederickney/database-connector-kit"
Documentation = "https://github.com/frederickney/database-connector-kit/blob/master/readme.md"
Repository = "https://github.com/frederickney/database-connector-kit"
Issues = "https://github.com/frederickney/database-connector-kit/issues"
source = "https://github.com/frederickney/database-connector-kit"